# hft-engine-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  check_funding.py  config.example.json  config.example.toml  docker-compose.yml  funding_test.py  get_funding.py  spread_arb_config.example.json
.github/workflows/: docker-build.yml
docs/: backtest-design.md  implement.md  todo.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: enums.rs  fill.rs  mod.rs  order.rs  signal.rs
src/domain/: error.rs  mod.rs  model.rs  types.rs
src/domain/models/: balance.rs  bbo.rs  candle.rs  exchange.rs  fill.rs  funding_fee.rs  funding_rate.rs  greeks.rs  index_price.rs  mark_price.rs  market_status.rs  mod.rs  order.rs  order_status.rs  order_type.rs  order_update.rs  position.rs  side.rs  symbol.rs  symbol_meta.rs  time_in_force.rs
src/engine/: bootstrap.rs  config.rs  coordinator.rs  engine.rs  engine_actor.rs  executor.rs  metrics.rs  mod.rs  processor.rs
src/engine/actor/: clock.rs  engine.rs  executor.rs  mod.rs  processor.rs  signal_processor.rs
src/engine/funding/: engine.rs  executor.rs  metrics.rs  mod.rs
src/engine/live/: clock.rs  crypto_status.rs  engine.rs  exchange_module.rs  executor.rs  income_processor.rs  manager.rs  mod.rs  outcome_processor.rs  processor.rs  signal_processor.rs
src/exchange/: api.rs  client.rs  mod.rs  ws_loop.rs  ws_util.rs
src/exchange/actor/: binance_private_ws.rs  exchange.rs  mod.rs  okx_private_ws.rs  private_ws.rs  public_ws.rs  ws.rs
src/exchange/binance/: actor.rs  client.rs  codec.rs  config.rs  mod.rs  module.rs  rest.rs  symbol.rs  ws.rs
src/exchange/hyperliquid/: client.rs  codec.rs  mod.rs  module.rs  signing.rs  symbol.rs
src/exchange/ibkr/: auth.rs  client.rs  gateway.rs  mod.rs  oauth.rs  symbol.rs
src/exchange/okx/: actor.rs  client.rs  codec.rs  config.rs  mod.rs  module.rs  rest.rs  symbol.rs  ws.rs
src/exchange/subscriber/: actor.rs  mod.rs
src/exchange/utils/: mod.rs  price_formatter.rs
src/messaging/: dispatcher.rs  event.rs  event_bus.rs  mod.rs  state.rs  state_manager.rs
src/strategy/: api.rs  funding_arb.rs  metrics_pusher.rs  metrics_subscriber.rs  mod.rs  slack_notifier.rs
src/strategy/funding_arb/: config.rs  ema.rs  metrics.rs  mod.rs  signals.rs  strategy.rs
src/strategy/macd_grid/: config.rs  indicators.rs  (+2 more)
tests/: binance_order_test.rs  hyperliquid_order_test.rs  hyperliquid_xyz_test.rs  ibkr_config.json.example  ibkr_test.rs  okx_greeks_test.rs  okx_order_test.rs
(+29 files in other folders)
