[package]
name = "fee-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

# Config parsing
toml = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4"] }
