[package]
name = "fee-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"

# Ethereum signing (for Hyperliquid EIP-712)
alloy = { version = "1.0", features = ["signers", "signer-local"] }

# MessagePack serialization (for Hyperliquid action hash)
rmp-serde = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Actor framework
kameo = "0.19"
kameo_actors = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

# Config parsing
toml = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Decimal for precise financial calculations
rust_decimal = "1"

# TLS (for IBKR Gateway self-signed certs)
native-tls = "0.2"

# IBKR OAuth 1.0a
rsa = { version = "0.9", features = ["sha2"] }
num-bigint = "0.4"
sha1 = "0.10"
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
percent-encoding = "2"

[[bin]]
name = "funding_arb"
path = "src/bin/funding_arb.rs"
